--- a/desktop/apps/buy_art/stylesheets/mobile.styl
+++ b/desktop/apps/buy_art/stylesheets/mobile.styl
@@ -8,15 +8,16 @@
       margin-bottom 20px
 
   .buy-art-intro
-    &__content
-      padding 0 20px
-    &__stat_container
-      width 330px
-    &__stat
+    height 560px
+   &__stat_container
+      width 320px
       height 85px
     &__title
+      max-width 280px
       garamond-size('headline', true)
     &__subtitle
+      max-width 280px
+      margin 0 auto
       garamond-size('l-body', true)
     &__stat-number
       garamond-size('s-headline', true)
